# tegra-rcm-console

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: TESTING.md
include/: conf.h
src/: main.cpp
tools/: pyproject.toml
tools/tegra_button/: __main__.py  board.py  flash.py
tools/tests/: test_board.py  test_flash.py
udev/: 99-tegra-button.rules
